AB#190198: Fixed alignment for tablet and xl screens.

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/faq-filters/_faq-filters.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/faq-filters/_faq-filters.scss
@@ -28,9 +28,17 @@
   }
 
   &__search-results {
-    margin: 20px 40px 0 20px;
+    margin: 20px 40px 0 45px;
     font-size: 1.6rem;
     color: clr(primary);
+
+    @include medium {
+      margin: 20px 40px 0 65px;
+    }
+
+    @include  xl {
+      margin: 20px 40px 0 25px;
+    }
   }
 
   &__filters {
